samples/_failures_safe/1761509591_087739_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec457707.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ec457707.c:184:9: error: expected declaration or statement at end of input
  184 |         } else {
      |         ^
./samples/SAFE/__tmp_ec457707.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec457707.c:184:9: error: expected declaration or statement at end of input
